welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: not found: value faire4V
  	faire4V()
        ^PatternPicture:66: error: too many arguments for method faireV: ()Unit
	   faireV(i)
                 ^